src/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* width */
::-webkit-scrollbar {
  width: 8smpx;
}
/* Track */
::-webkit-scrollbar-track {
  background: transparent;
  margin-bottom: 1.5rem;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #f8f8f8;
  border-radius: 20px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

